# Charm-out

./: CMakeLists.txt  README.md
.github/workflows/: build-arm-none-eabi.yml  build-clang.yml  build-gcc.yml  build-msvc.yml  cmake-build-multi-platform.yml
doc/: README_en.md
examples/: example.cpp
examples/stm32f103c8/: CMakeLists.txt  stm32f103c8.ioc  stm32f103c8_blue_pill.cfg
examples/stm32f103c8/Core/Src/: main.c  out.port.stm32.cpp
examples/windows/: CMakeLists.txt  main.cpp  out.port.windows.cpp
modules/: out.ansi.cppm  out.api.cppm  out.core.cppm  out.domain.cppm  out.format.cppm  out.logger.cppm  out.port.cppm  out.port.template.cpp  out.print.cppm  out.sink.cppm
